# EventOrOutage

./: .env-example  .gitignore  LICENSE  README.md  pyproject.toml  traffic_analysis.md  website_metrics_labelled.csv  website_metrics_unlabelled.csv
artifacts/: traffic_analysis.md  website_metrics_labelled.csv  website_metrics_unlabelled.csv
src/event_or_outage/: .env.example  bulk_anomaly_agent.py  cli.py  file_utils.py  llm_utils.py  markdown_generator.py  naive_anomaly_detecter.py  prompt_templates.yaml  single_anomaly_agent.py  synthetic_data.py  synthetic_data_generator.py  utils.py
src/event_or_outage/tools/: calendarific_api_tool.py  holidays_api_tool.py
